[package]
name = "fendermint_actor_customsyscall"
description = "Test actor for demonstrating calling custom syscalls"
license.workspace = true
edition.workspace = true
authors.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cid = { workspace = true, default-features = false }
fil_actors_runtime = { workspace = true, optional = true, features = [
    "fil-actor",
] }
fvm_sdk = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_encoding = { workspace = true }
num-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_tuple = { workspace = true }
num-traits = { workspace = true }
frc42_dispatch = { workspace = true }
bincode = "1.3.3"
tfhe = { version = "0.5.3", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[features]
default = []
fil-actor = ["fil_actors_runtime"]